failure in the fullstop, rest is good

--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -1,3 +1,4 @@
+subClassOf = is a subclass of
 hasMaker = is made by
 hasFood = contains
 producesWine = produces wine
@@ -11,23 +12,21 @@ madeFromFruit = made from
 incompatibleWith = incompatible with 
 madeFromGrape = made from Grape
 adjacentRegion = is adjacent to
-hasBody = has body that is 
-course = course 
+hasBody = has body that is
+course = course
 disjointWith = is disjoint with
 isDefinedBy = is defined by
 goesWellWith = goes well with
 priorVersion = has a prior version which is 
 hasWineDescriptor = is described by the following wine characteristics:
-hasColor = has the color 
+hasColor = has the color
 hasDrink = goes well with
 locatedIn = is located in
-value = 
-type = is
-equivalentTo = is the same as
-and = that 
-
+type = is of type
+equivalentTo = is equivalent to
+and = that
 NonSweetFruitCourse = NonSweet Fruits
-CabernetSauvignon = Cabernet Sauvignon 
+CabernetSauvignon = Cabernet Sauvignon
 PastaWithWhiteSauce = Pasta With White Sauce
 PastaWithSpicyRedSauceCourse = Pasta With Spicy Red Sauce
 PotableLiquid = drinks
@@ -41,7 +40,6 @@ Pauillac = Pauillac
 RoseWine = Rose Wine 
 Wine = Wine
 DryRedWine = Dry Red Wine
-Medoc = Medoc
 Meat = Meat
 SpicyRedMeat = Spicy Red Meat
 DarkMeatFowl = Dark Meat Fowl
