failure model of extra ontology

--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -3,7 +3,7 @@ hasMaker = is made by
 hasFood = contains
 producesWine = produces wine
 versionInfo = has version
-hasSugar = has sugar //
+hasSugar = has sugar
 yearValue = was produced in the year
 madeIntoWine = is made into
 hasFlavor = has the following flavour:
@@ -32,6 +32,7 @@ PastaWithSpicyRedSauceCourse = Pasta With Spicy Red Sauce
 PotableLiquid = drinks
 Region = region
 LightMeatFowlCourse = Light Meat Fowl Course
+LightMeatFowl = Light Meat Fowl
 AlsatianWine = Alsatian Wine
 Riesling = Riesling 
 SemillonOrSauvignonBlanc = Semillon or Sauvignon Blanc
