modifications in some nlg errors, as well interface problems

--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -8,6 +8,8 @@ yearValue = was produced in the year
 madeIntoWine = is made into
 hasFlavor = has the following flavour:
 hasVintageYear = was formed in
+range = should 
+sameAs = is the same as
 madeFromFruit = made from
 incompatibleWith = incompatible with 
 madeFromGrape = made from Grape
@@ -20,10 +22,10 @@ goesWellWith = goes well with
 priorVersion = has a prior version which is 
 hasWineDescriptor = is described by the following wine characteristics:
 hasColor = has the color
-hasDrink = goes well with
+hasDrink = has the following drink:
 locatedIn = is located in
 type = is of type
-equivalentTo = is equivalent to
+equivalentTo = is similar to
 and = that
 NonSweetFruitCourse = NonSweet Fruits
 CabernetSauvignon = Cabernet Sauvignon
