working gui with fully modified NLG mechanism

--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -1,16 +1,18 @@
-subClassOf = is of type
+subClassOf = is a special kind of 
 hasMaker = is made by
 hasFood = contains
 producesWine = produces wine
 versionInfo = has version
 hasSugar = has sugar
+offDry = off-dry
 yearValue = was produced in the year
 madeIntoWine = is made into
 hasFlavor = has the following flavour:
 hasVintageYear = was formed in
-range = should 
+domain = should match a 
 sameAs = is the same as
 madeFromFruit = made from
+hasFlavor = is
 incompatibleWith = incompatible with 
 madeFromGrape = made from Grape
 adjacentRegion = is adjacent to
@@ -20,12 +22,12 @@ disjointWith = is disjoint with
 isDefinedBy = is defined by
 goesWellWith = goes well with
 priorVersion = has a prior version which is 
-hasWineDescriptor = is described by the following wine characteristics:
+hasWineDescriptor = Wine properties
 hasColor = has the color
-hasDrink = has the following drink:
+hasDrink = has drink
 locatedIn = is located in
-type = is of type
-equivalentTo = is similar to
+type = is a special kind of
+equivalentTo = is identical to
 and = that
 NonSweetFruitCourse = NonSweet Fruits
 CabernetSauvignon = Cabernet Sauvignon
