--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -3,62 +3,60 @@ hasMaker = is made by
 hasFood = contains
 producesWine = produces wine
 versionInfo = has version
-hasSugar = has sugar
-offDry = off-dry
+
 yearValue = was produced in the year
 madeIntoWine = is made into
-hasFlavor = has the following flavour:
+hasFlavor = has the following flavor:
 hasVintageYear = was formed in
-domain = should match a 
+domain = property is given to a
+range = property corresponds to a 	 
 sameAs = is the same as
 madeFromFruit = made from
-hasFlavor = is
+
 incompatibleWith = incompatible with 
-madeFromGrape = made from Grape
+madeFromGrape = made from a number of grapes
 adjacentRegion = is adjacent to
-hasBody = has body that is
+
 course = course
 disjointWith = is disjoint with
 isDefinedBy = is defined by
 goesWellWith = goes well with
 priorVersion = has a prior version which is 
 hasWineDescriptor = Wine properties
-hasColor = has the color
+
+hasSugar = has a
+hasFlavor = has a
+hasColor = has a
+hasBody = has a
 hasDrink = has drink
+
 locatedIn = is located in
 type = is a special kind of
 equivalentTo = is identical to
-and = that
+
 NonSweetFruitCourse = NonSweet Fruits
-CabernetSauvignon = Cabernet Sauvignon
-PastaWithWhiteSauce = Pasta With White Sauce
-PastaWithSpicyRedSauceCourse = Pasta With Spicy Red Sauce
 PotableLiquid = drinks
-Region = region
-LightMeatFowlCourse = Light Meat Fowl Course
-LightMeatFowl = Light Meat Fowl
-AlsatianWine = Alsatian Wine
-Riesling = Riesling 
-SemillonOrSauvignonBlanc = Semillon or Sauvignon Blanc
-TexasWine = Texas Wine 
-Pauillac = Pauillac
-RoseWine = Rose Wine 
-Wine = Wine
-DryRedWine = Dry Red Wine
-Meat = Meat
-SpicyRedMeat = Spicy Red Meat
-DarkMeatFowl = Dark Meat Fowl
-SweetWine = Sweet wine
-NonBlandFish = Non Bland Fish
-Zinfandel = Zinfandel
-CheeseNutsDessertCourse = Cheese Nuts Dessert
-PastaWithLightCreamCourse = Pasta with Light Cream
-Beaujolais = Beaujolais
-Semillon = Semillon
-NonRedMeat = Non Red Meat
-SweetFruitCourse = Sweet Fruit
+
 WineTaste = has wine taste that is
 VintageYear = was formed in
-FruitCourse = Fruit
+FruitCourse = Fruit course
+
 NonBlandFishCourse = Non-bland fish course
 Year1998 = 1998
+
+Strong = strong flavor
+Delicate = delicate flavor
+Moderate = moderate flavor
+
+Red = red color
+White = white color
+Rose = rose color
+
+Dry = dry sugar
+OffDry = off-dry sugar
+Sweet = sweet sugar
+
+Full = full body
+Light = light body
+Medium = medium body 
+
