code cleaning up

--- a/examples/src/main/java/MessagesBundle_en_US.properties
+++ b/examples/src/main/java/MessagesBundle_en_US.properties
@@ -12,7 +12,8 @@ domain = property is given to a
 range = property corresponds to a 	 
 sameAs = is the same as
 madeFromFruit = made from
-
+subPropertyOf = is a special property of
+min = is minimum
 incompatibleWith = incompatible with 
 madeFromGrape = made from a number of grapes
 adjacentRegion = is adjacent to
@@ -22,13 +23,13 @@ disjointWith = is disjoint with
 isDefinedBy = is defined by
 goesWellWith = goes well with
 priorVersion = has a prior version which is 
-hasWineDescriptor = Wine properties
+hasWineDescriptor = Wine
 
 hasSugar = has a
 hasFlavor = has a
 hasColor = has a
 hasBody = has a
-hasDrink = has drink
+hasDrink = has a drink that
 
 locatedIn = is located in
 type = is a special kind of
